<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.RegisterActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:ems="10"
        android:hint="@string/registerEditTextHintName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:ems="10"
        android:hint="@string/registerEditTextHintSurname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fieldOfStudies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fieldOfStudies"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:ems="10"
        android:hint="@string/registerEditTextHintFieldOfStudies"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_register"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:ems="10"
        android:hint="@string/registerEditTextHintLogin"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="190dp"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:ems="10"
        android:hint="@string/registerEditTextHintPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button"
        android:text="@string/registerButtonRegister"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/backButtonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButtonRegister"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:text="@string/registerButtonBack"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>