<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/loginEditTextHintLogin"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="190dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/loginEditTextHintPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button"
        android:text="@string/loginButtonLogin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:text="@string/loginButtonBack"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>